Fixing checkbox alignment of "Remember me..." on login form

--- a/sass/_form.sass
+++ b/sass/_form.sass
@@ -68,7 +68,7 @@ fieldset
 	.radio-inline input[type="radio"],
 	.checkbox input[type="checkbox"],
 	.checkbox-inline input[type="checkbox"]
-		margin-left: -20px
+		margin-left: 0
 
 	.field.checkbox
 		margin-bottom: 30px
@@ -76,7 +76,6 @@ fieldset
 
 	fieldset + .Actions
 		margin-top: 0
-
 
 
 // Select dropdown
